Update example projects

--- a/example-development/src/main/resources/application.yml
+++ b/example-development/src/main/resources/application.yml
@@ -1,7 +1,3 @@
 coffeenet:
-  application-name: ExampleProject
+  application-name: ExampleProjectWithDevelopmentProfile
   profile: development
-  security:
-    client:
-      client-id: coffeeNetClient
-      client-secret: coffeeNetClientSecret
