--- a/example-development/pom.xml
+++ b/example-development/pom.xml
@@ -17,7 +17,7 @@
     <parent>
         <groupId>coffee.synyx</groupId>
         <artifactId>coffeenet-starter-parent</artifactId>
-        <version>0.19.0</version>
+        <version>0.20.0</version>
     </parent>
 
     <repositories>
@@ -35,7 +35,7 @@
         </dependency>
         <dependency>
             <groupId>coffee.synyx</groupId>
-            <artifactId>starter-sso</artifactId>
+            <artifactId>starter-security</artifactId>
         </dependency>
         <dependency>
             <groupId>coffee.synyx</groupId>
