--- a/starter-web-thymeleaf-example/pom.xml
+++ b/starter-web-thymeleaf-example/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>coffee.synyx</groupId>
         <artifactId>coffeenet-starter-parent</artifactId>
-        <version>0.21.0-SNAPSHOT</version>
+        <version>0.21.0</version>
     </parent>
 
     <repositories>
