--- a/starter-discovery-example/pom.xml
+++ b/starter-discovery-example/pom.xml
@@ -13,8 +13,8 @@
     <parent>
         <groupId>coffee.synyx</groupId>
         <artifactId>coffeenet-starter-parent</artifactId>
-        <version>0.24.0-SNAPSHOT</version>
-        <relativePath />
+        <version>0.24.0</version>
+        <relativePath/>
     </parent>
 
     <repositories>
@@ -25,6 +25,12 @@
     </repositories>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
         <!-- CoffeeNet -->
         <dependency>
             <groupId>coffee.synyx</groupId>
