--- a/starter-logging-example/pom.xml
+++ b/starter-logging-example/pom.xml
@@ -12,7 +12,7 @@
     <name>Example Project Starter Logging</name>
 
     <parent>
-        <groupId>coffee.synyx</groupId>
+        <groupId>rocks.coffeenet</groupId>
         <artifactId>coffeenet-starter-parent</artifactId>
         <version>0.37.0</version>
     </parent>
@@ -32,7 +32,7 @@
 
         <!-- CoffeeNet -->
         <dependency>
-            <groupId>coffee.synyx</groupId>
+            <groupId>rocks.coffeenet</groupId>
             <artifactId>starter-logging</artifactId>
         </dependency>
     </dependencies>
